--- a/css/css.css
+++ b/css/css.css
@@ -6,7 +6,7 @@ body{
     background-color: rgba(255, 255, 255, 0.212);  
     backdrop-filter: blur(5px);
     /* width: fit-content; */
-    max-width: 60%;
+    max-width: 372px;
     height: 500px;
     margin: 50px auto;
     padding: 20px;
